--- a/VCL_Telesis/VCLTelesis.dproj
+++ b/VCL_Telesis/VCLTelesis.dproj
@@ -101,7 +101,7 @@
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
         <VerInfo_Locale>1033</VerInfo_Locale>
-        <VerInfo_Build>72</VerInfo_Build>
+        <VerInfo_Build>75</VerInfo_Build>
         <DCC_IntegerOverflowCheck>true</DCC_IntegerOverflowCheck>
         <DCC_RangeChecking>true</DCC_RangeChecking>
         <VerInfo_MajorVer>2</VerInfo_MajorVer>
@@ -110,7 +110,7 @@
         <DCC_ExeOutput>..\_exe\$(Config)\</DCC_ExeOutput>
         <DCC_DcuOutput>unit\$(Config)</DCC_DcuOutput>
         <VerInfo_AutoIncVersion>true</VerInfo_AutoIncVersion>
-        <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=2.0.0.72;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
+        <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=2.0.0.75;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
         <DCC_MapFile>3</DCC_MapFile>
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
     </PropertyGroup>
@@ -152,6 +152,15 @@
         <DCCReference Include="VCL.Telesis.Decoder.FindSP.pas">
             <Form>FrameFindSP</Form>
             <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="VCL.Telesis.DecoderFFT_FSK.pas">
+            <Form>FormDEcoderFFT_FSK</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="VCL.Telesis.FrameFFT_FSK.pas">
+            <Form>FrameFFT_FSK</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TFrame</DesignClass>
         </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
