--- a/Tst_Fibonachi/tst.dproj
+++ b/Tst_Fibonachi/tst.dproj
@@ -88,6 +88,7 @@
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="..\Fibonach.pas"/>
+        <DCCReference Include="..\DataProf.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
