--- a/Core/Core.dproj
+++ b/Core/Core.dproj
@@ -216,6 +216,7 @@
         <DCCReference Include="Math.Telesistem.pas"/>
         <DCCReference Include="XMLScript.IKN.pas"/>
         <DCCReference Include="Plot.pas"/>
+        <DCCReference Include="FileCachImpl.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
