--- a/CreateMetaData/Win32/Debug/setup.ini
+++ b/CreateMetaData/Win32/Debug/setup.ini
@@ -15,126 +15,102 @@ NormPos(1680x1050)=344,5,1617,891
 [FormMeta\mIn_Lines]
 Item0=typedef struct
 Item1={
-Item2=int16_t X;
-Item3=int16_t Y;
-Item4=int16_t Z;
-Item5=} accel_t __attribute__((aligned));
-Item6=
-Item7=typedef struct
-Item8={
-Count=31
-Item9=int16_t d0[681];
-Item10=int16_t d1[681];
-Item11=int16_t d2[681];
-Item12=int16_t d3[681];
-Item13=int16_t d4[681];
-Item14=int16_t d5[681];
-Item15=int16_t d6[681];
-Item16=int16_t d7[681];
-Item17=int16_t d8[681];
-Item18=} fkd_t __attribute__((aligned));
-Item19=
-Item20=typedef struct
-Item21={
-Item22=accel_t accel;
-Item23=uint8_t T;
-Item24=uint16_t AmpH;
-Item25=fkd_t fkd;
-Item26=} Prof_t __attribute__((aligned));
-Item27=
-Item28=
-Item29=Prof_t  pf;///caliper
-Item30=
+Item2=	float X;
+Item3=	float Y;
+Item4=	float Z;
+Item5=	int16_t T; 
+Item6=} Dat_t __attribute__((aligned));
+Item7=
+Item8=typedef struct
+Count=20
+Item9={
+Item10=	uint32_t InclTime; /// itime|D3TM
+Item11=	uint8_t Event;
+Item12= 	Dat_t accel; 
+Item13= 	Dat_t magnit; 
+Item14=	float DZY;
+Item15=	float DZ;
+Item16=	float motk;   /// маг_отклон 
+Item17=} InclW_t __attribute__((aligned));
+Item18=
+Item19=InclW_t incW; /// Inclin|D3
 
 [FormMeta\mOut_Lines]
-Count=89
+Count=76
 Item0=/* Данные сгенерированы из:
 Item1=typedef struct
 Item2={
-Item3=int16_t X;
-Item4=int16_t Y;
-Item5=int16_t Z;
-Item6=} accel_t __attribute__((aligned));
-Item7=
-Item8=typedef struct
-Item9={
-Item10=int16_t d0[681];
-Item11=int16_t d1[681];
-Item12=int16_t d2[681];
-Item13=int16_t d3[681];
-Item14=int16_t d4[681];
-Item15=int16_t d5[681];
-Item16=int16_t d6[681];
-Item17=int16_t d7[681];
-Item18=int16_t d8[681];
-Item19=} fkd_t __attribute__((aligned));
-Item20=
-Item21=typedef struct
-Item22={
-Item23=accel_t accel;
-Item24=uint8_t T;
-Item25=uint16_t AmpH;
-Item26=fkd_t fkd;
-Item27=} Prof_t __attribute__((aligned));
-Item28=
-Item29=
-Item30=Prof_t  pf;///caliper
+Item3=	float X;
+Item4=	float Y;
+Item5=	float Z;
+Item6=	int16_t T; 
+Item7=} Dat_t __attribute__((aligned));
+Item8=
+Item9=typedef struct
+Item10={
+Item11=	uint32_t InclTime; /// itime|D3TM
+Item12=	uint8_t Event;
+Item13= 	Dat_t accel; 
+Item14= 	Dat_t magnit; 
+Item15=	float DZY;
+Item16=	float DZ;
+Item17=	float motk;   /// маг_отклон 
+Item18=} InclW_t __attribute__((aligned));
+Item19=
+Item20=InclW_t incW; /// Inclin|D3
+Item21=*/
+Item22=
+Item23=// тип метаданных: meta_magnit_Dat_t=magnit
+Item24=typedef struct {
+Item25=  varType_t RecType; uint16_t SelfLen; uint8_t RecName[sizeof("magnit")];
+Item26=    varType_t varTypeX; uint8_t paramX[sizeof("X")];
+Item27=    varType_t varTypeY; uint8_t paramY[sizeof("Y")];
+Item28=    varType_t varTypeZ; uint8_t paramZ[sizeof("Z")];
+Item29=    varType_t varTypeT; uint8_t paramT[sizeof("T")];
+Item30=} meta_magnit_Dat_t __attribute__((aligned));
 Item31=
-Item32=*/
-Item33=
-Item34=// тип метаданных: meta_accel_accel_t=accel
-Item35=typedef struct {
-Item36=  varType_t RecType; uint16_t SelfLen; uint8_t RecName[sizeof("accel")];
-Item37=    varType_t varTypeX; uint8_t paramX[sizeof("X")];
-Item38=    varType_t varTypeY; uint8_t paramY[sizeof("Y")];
-Item39=    varType_t varTypeZ; uint8_t paramZ[sizeof("Z")];
-Item40=} meta_accel_accel_t __attribute__((aligned));
-Item41=
-Item42=// тип метаданных: meta_fkd_fkd_t=fkd
-Item43=typedef struct {
-Item44=  varType_t RecType; uint16_t SelfLen; uint8_t RecName[sizeof("fkd")];
-Item45=    varType_t TypeArrd0; uint16_t Arrlend0; varType_t varTyped0; uint8_t paramd0[sizeof("d0")];
-Item46=    varType_t TypeArrd1; uint16_t Arrlend1; varType_t varTyped1; uint8_t paramd1[sizeof("d1")];
-Item47=    varType_t TypeArrd2; uint16_t Arrlend2; varType_t varTyped2; uint8_t paramd2[sizeof("d2")];
-Item48=    varType_t TypeArrd3; uint16_t Arrlend3; varType_t varTyped3; uint8_t paramd3[sizeof("d3")];
-Item49=    varType_t TypeArrd4; uint16_t Arrlend4; varType_t varTyped4; uint8_t paramd4[sizeof("d4")];
-Item50=    varType_t TypeArrd5; uint16_t Arrlend5; varType_t varTyped5; uint8_t paramd5[sizeof("d5")];
-Item51=    varType_t TypeArrd6; uint16_t Arrlend6; varType_t varTyped6; uint8_t paramd6[sizeof("d6")];
-Item52=    varType_t TypeArrd7; uint16_t Arrlend7; varType_t varTyped7; uint8_t paramd7[sizeof("d7")];
-Item53=    varType_t TypeArrd8; uint16_t Arrlend8; varType_t varTyped8; uint8_t paramd8[sizeof("d8")];
-Item54=} meta_fkd_fkd_t __attribute__((aligned));
-Item55=
-Item56=// тип метаданных: meta_pf_Prof_t=caliper
-Item57=typedef struct {
-Item58=  varType_t RecType; uint16_t SelfLen; uint8_t RecName[sizeof("caliper")];
-Item59=    meta_accel_accel_t meta_accel;
-Item60=    varType_t varTypeT; uint8_t paramT[sizeof("T")];
-Item61=    varType_t varTypeAmpH; uint8_t paramAmpH[sizeof("AmpH")];
-Item62=    meta_fkd_fkd_t meta_fkd;
-Item63=} meta_pf_Prof_t __attribute__((aligned));
-Item64=
-Item65=// заполнение данных Prof_t pf
-Item66=#define META_PROF_T_PF meta_pf_Prof_t meta_pf;
-Item67=#define META_PROF_T_PF_IMPL\
-Item68=  {VT_RECORD, sizeof(meta_pf_Prof_t),"caliper",\
-Item69=     {VT_RECORD, sizeof(meta_accel_accel_t),"accel",\
-Item70=        VT_I2, "X",\
-Item71=        VT_I2, "Y",\
-Item72=        VT_I2, "Z",\
-Item73=     },\
-Item74=     VT_UI1, "T",\
-Item75=     VT_UI2, "AmpH",\
-Item76=     {VT_RECORD, sizeof(meta_fkd_fkd_t),"fkd",\
-Item77=        VT_ARRAY, 681, VT_I2, "d0",\
-Item78=        VT_ARRAY, 681, VT_I2, "d1",\
-Item79=        VT_ARRAY, 681, VT_I2, "d2",\
-Item80=        VT_ARRAY, 681, VT_I2, "d3",\
-Item81=        VT_ARRAY, 681, VT_I2, "d4",\
-Item82=        VT_ARRAY, 681, VT_I2, "d5",\
-Item83=        VT_ARRAY, 681, VT_I2, "d6",\
-Item84=        VT_ARRAY, 681, VT_I2, "d7",\
-Item85=        VT_ARRAY, 681, VT_I2, "d8",\
-Item86=     },\
-Item87=  },
-Item88=
+Item32=// тип метаданных: meta_accel_Dat_t=accel
+Item33=typedef struct {
+Item34=  varType_t RecType; uint16_t SelfLen; uint8_t RecName[sizeof("accel")];
+Item35=    varType_t varTypeX; uint8_t paramX[sizeof("X")];
+Item36=    varType_t varTypeY; uint8_t paramY[sizeof("Y")];
+Item37=    varType_t varTypeZ; uint8_t paramZ[sizeof("Z")];
+Item38=    varType_t varTypeT; uint8_t paramT[sizeof("T")];
+Item39=} meta_accel_Dat_t __attribute__((aligned));
+Item40=
+Item41=// тип метаданных: meta_incW_InclW_t=Inclin|D3
+Item42=typedef struct {
+Item43=  varType_t RecType; uint16_t SelfLen; uint8_t RecName[sizeof("Inclin|D3")];
+Item44=    varType_t varTypeInclTime; uint8_t paramInclTime[sizeof("itime|D3TM")];
+Item45=    varType_t varTypeEvent; uint8_t paramEvent[sizeof("Event")];
+Item46=    meta_accel_Dat_t meta_accel;
+Item47=    meta_magnit_Dat_t meta_magnit;
+Item48=    varType_t varTypeDZY; uint8_t paramDZY[sizeof("DZY")];
+Item49=    varType_t varTypeDZ; uint8_t paramDZ[sizeof("DZ")];
+Item50=    varType_t varTypemotk; uint8_t parammotk[sizeof("маг_отклон")];
+Item51=} meta_incW_InclW_t __attribute__((aligned));
+Item52=
+Item53=// заполнение данных InclW_t incW
+Item54=#define META_INCLW_T_INCW meta_incW_InclW_t meta_incW;
+Item55=#define META_INCLW_T_INCW_IMPL\
+Item56=  {VT_RECORD, sizeof(meta_incW_InclW_t),"Inclin|D3",\
+Item57=     VT_UI4, "itime|D3TM",\
+Item58=     VT_UI1, "Event",\
+Item59=     {VT_RECORD, sizeof(meta_accel_Dat_t),"accel",\
+Item60=        VT_R4, "X",\
+Item61=        VT_R4, "Y",\
+Item62=        VT_R4, "Z",\
+Item63=        VT_I2, "T",\
+Item64=     },\
+Item65=     {VT_RECORD, sizeof(meta_magnit_Dat_t),"magnit",\
+Item66=        VT_R4, "X",\
+Item67=        VT_R4, "Y",\
+Item68=        VT_R4, "Z",\
+Item69=        VT_I2, "T",\
+Item70=     },\
+Item71=     VT_R4, "DZY",\
+Item72=     VT_R4, "DZ",\
+Item73=     VT_R4, "маг_отклон",\
+Item74=  },
+Item75=
 
