--- a/CreateMetaData/Win32/Debug/setup.ini
+++ b/CreateMetaData/Win32/Debug/setup.ini
@@ -6,72 +6,115 @@ PixelsPerInch=96
 MinMaxPos(1920x1080)=-1,-1,-1,-1
 MinMaxPos=-1,-1,-1,-1
 NormPos(1920x1080)=377,62,1650,948
-NormPos=344,5,1617,891
+NormPos=413,127,1686,1013
 mIn_Height=847
 mOut_Height=847
 MinMaxPos(1680x1050)=-1,-1,-1,-1
-NormPos(1680x1050)=344,5,1617,891
+NormPos(1680x1050)=413,127,1686,1013
 
 [FormMeta\mIn_Lines]
-Item0=typedef struct {
-Item1=      uint16_t NK1; ///нк1
-Item2=      uint16_t NK2; ///нк2
-Item3=      uint16_t NGK; ///нгк
-Item4=} nnk_t;
-Item5=
-Item6=
-Item7=nnk_t nnkW; /// ННК|NNK1
-Count=10
-Item8=
-Item9=nnk_t nnkR; /// ННК|NNK1
+Item0=typedef struct
+Item1={
+Item2=	float X;
+Item3=	float Y;
+Item4=	float Z;
+Item5=	int16_t T; 
+Item6=} Dat_t __attribute__((aligned));
+Item7=
+Count=21
+Item8=typedef struct
+Item9={
+Item10=	uint32_t InclTime; /// itime|D3TM
+Item11=	uint8_t Event;
+Item12= 	Dat_t accel; 
+Item13= 	Dat_t magnit; 
+Item14=	float DZY;
+Item15=	float DZ;
+Item16=	float motk;   /// маг_отклон 
+Item17=	uint8_t cmd;
+Item18=} InclW_t __attribute__((aligned));
+Item19=
+Item20=InclW_t incW; /// Inclin|D3
 
 [FormMeta\mOut_Lines]
-Count=47
+Count=79
 Item0=/* Данные сгенерированы из:
-Item1=typedef struct {
-Item2=      uint16_t NK1; ///нк1
-Item3=      uint16_t NK2; ///нк2
-Item4=      uint16_t NGK; ///нгк
-Item5=} nnk_t;
-Item6=
-Item7=
-Item8=nnk_t nnkW; /// ННК|NNK1
-Item9=
-Item10=nnk_t nnkR; /// ННК|NNK1
-Item11=*/
-Item12=
-Item13=// тип метаданных: meta_nnkR_nnk_t=ННК|NNK1
-Item14=typedef struct {
-Item15=  varType_t RecType; uint16_t SelfLen; uint8_t RecName[sizeof("ННК|NNK1")];
-Item16=    varType_t varTypeNK1; uint8_t paramNK1[sizeof("нк1")];
-Item17=    varType_t varTypeNK2; uint8_t paramNK2[sizeof("нк2")];
-Item18=    varType_t varTypeNGK; uint8_t paramNGK[sizeof("нгк")];
-Item19=} meta_nnkR_nnk_t __attribute__((aligned));
+Item1=typedef struct
+Item2={
+Item3=	float X;
+Item4=	float Y;
+Item5=	float Z;
+Item6=	int16_t T; 
+Item7=} Dat_t __attribute__((aligned));
+Item8=
+Item9=typedef struct
+Item10={
+Item11=	uint32_t InclTime; /// itime|D3TM
+Item12=	uint8_t Event;
+Item13= 	Dat_t accel; 
+Item14= 	Dat_t magnit; 
+Item15=	float DZY;
+Item16=	float DZ;
+Item17=	float motk;   /// маг_отклон 
+Item18=	uint8_t cmd;
+Item19=} InclW_t __attribute__((aligned));
 Item20=
-Item21=// тип метаданных: meta_nnkW_nnk_t=ННК|NNK1
-Item22=typedef struct {
-Item23=  varType_t RecType; uint16_t SelfLen; uint8_t RecName[sizeof("ННК|NNK1")];
-Item24=    varType_t varTypeNK1; uint8_t paramNK1[sizeof("нк1")];
-Item25=    varType_t varTypeNK2; uint8_t paramNK2[sizeof("нк2")];
-Item26=    varType_t varTypeNGK; uint8_t paramNGK[sizeof("нгк")];
-Item27=} meta_nnkW_nnk_t __attribute__((aligned));
-Item28=
-Item29=// заполнение данных nnk_t nnkW
-Item30=#define META_NNK_T_NNKW meta_nnkW_nnk_t meta_nnkW;
-Item31=#define META_NNK_T_NNKW_IMPL\
-Item32=  {VT_RECORD, sizeof(meta_nnkW_nnk_t),"ННК|NNK1",\
-Item33=     VT_UI2, "нк1",\
-Item34=     VT_UI2, "нк2",\
-Item35=     VT_UI2, "нгк",\
-Item36=  },
-Item37=
-Item38=// заполнение данных nnk_t nnkR
-Item39=#define META_NNK_T_NNKR meta_nnkR_nnk_t meta_nnkR;
-Item40=#define META_NNK_T_NNKR_IMPL\
-Item41=  {VT_RECORD, sizeof(meta_nnkR_nnk_t),"ННК|NNK1",\
-Item42=     VT_UI2, "нк1",\
-Item43=     VT_UI2, "нк2",\
-Item44=     VT_UI2, "нгк",\
-Item45=  },
-Item46=
+Item21=InclW_t incW; /// Inclin|D3
+Item22=*/
+Item23=
+Item24=// тип метаданных: meta_magnit_Dat_t=magnit
+Item25=typedef struct {
+Item26=  varType_t RecType; uint16_t SelfLen; uint8_t RecName[sizeof("magnit")];
+Item27=    varType_t varTypeX; uint8_t paramX[sizeof("X")];
+Item28=    varType_t varTypeY; uint8_t paramY[sizeof("Y")];
+Item29=    varType_t varTypeZ; uint8_t paramZ[sizeof("Z")];
+Item30=    varType_t varTypeT; uint8_t paramT[sizeof("T")];
+Item31=} meta_magnit_Dat_t __attribute__((aligned));
+Item32=
+Item33=// тип метаданных: meta_accel_Dat_t=accel
+Item34=typedef struct {
+Item35=  varType_t RecType; uint16_t SelfLen; uint8_t RecName[sizeof("accel")];
+Item36=    varType_t varTypeX; uint8_t paramX[sizeof("X")];
+Item37=    varType_t varTypeY; uint8_t paramY[sizeof("Y")];
+Item38=    varType_t varTypeZ; uint8_t paramZ[sizeof("Z")];
+Item39=    varType_t varTypeT; uint8_t paramT[sizeof("T")];
+Item40=} meta_accel_Dat_t __attribute__((aligned));
+Item41=
+Item42=// тип метаданных: meta_incW_InclW_t=Inclin|D3
+Item43=typedef struct {
+Item44=  varType_t RecType; uint16_t SelfLen; uint8_t RecName[sizeof("Inclin|D3")];
+Item45=    varType_t varTypeInclTime; uint8_t paramInclTime[sizeof("itime|D3TM")];
+Item46=    varType_t varTypeEvent; uint8_t paramEvent[sizeof("Event")];
+Item47=    meta_accel_Dat_t meta_accel;
+Item48=    meta_magnit_Dat_t meta_magnit;
+Item49=    varType_t varTypeDZY; uint8_t paramDZY[sizeof("DZY")];
+Item50=    varType_t varTypeDZ; uint8_t paramDZ[sizeof("DZ")];
+Item51=    varType_t varTypemotk; uint8_t parammotk[sizeof("маг_отклон")];
+Item52=    varType_t varTypecmd; uint8_t paramcmd[sizeof("cmd")];
+Item53=} meta_incW_InclW_t __attribute__((aligned));
+Item54=
+Item55=// заполнение данных InclW_t incW
+Item56=#define META_INCLW_T_INCW meta_incW_InclW_t meta_incW;
+Item57=#define META_INCLW_T_INCW_IMPL\
+Item58=  {VT_RECORD, sizeof(meta_incW_InclW_t),"Inclin|D3",\
+Item59=     VT_UI4, "itime|D3TM",\
+Item60=     VT_UI1, "Event",\
+Item61=     {VT_RECORD, sizeof(meta_accel_Dat_t),"accel",\
+Item62=        VT_R4, "X",\
+Item63=        VT_R4, "Y",\
+Item64=        VT_R4, "Z",\
+Item65=        VT_I2, "T",\
+Item66=     },\
+Item67=     {VT_RECORD, sizeof(meta_magnit_Dat_t),"magnit",\
+Item68=        VT_R4, "X",\
+Item69=        VT_R4, "Y",\
+Item70=        VT_R4, "Z",\
+Item71=        VT_I2, "T",\
+Item72=     },\
+Item73=     VT_R4, "DZY",\
+Item74=     VT_R4, "DZ",\
+Item75=     VT_R4, "маг_отклон",\
+Item76=     VT_UI1, "cmd",\
+Item77=  },
+Item78=
 
