--- a/CreateMetaData/Win32/Debug/setup.ini
+++ b/CreateMetaData/Win32/Debug/setup.ini
@@ -6,115 +6,64 @@ PixelsPerInch=96
 MinMaxPos(1920x1080)=-1,-1,-1,-1
 MinMaxPos=-1,-1,-1,-1
 NormPos(1920x1080)=377,62,1650,948
-NormPos=413,127,1686,1013
-mIn_Height=847
-mOut_Height=847
+NormPos=314,198,1420,898
+mIn_Height=661
+mOut_Height=661
 MinMaxPos(1680x1050)=-1,-1,-1,-1
-NormPos(1680x1050)=413,127,1686,1013
+NormPos(1680x1050)=314,198,1420,898
 
 [FormMeta\mIn_Lines]
 Item0=typedef struct
 Item1={
-Item2=	float X;
-Item3=	float Y;
-Item4=	float Z;
-Item5=	int16_t T; 
-Item6=} Dat_t __attribute__((aligned));
+Item2=	int16_t adc; /// АЦП
+Item3=} Decoder_t; 
+Item4=
+Item5=
+Item6=Decoder_t ResW; /// Декодер
 Item7=
-Count=21
-Item8=typedef struct
-Item9={
-Item10=	uint32_t InclTime; /// itime|D3TM
-Item11=	uint8_t Event;
-Item12= 	Dat_t accel; 
-Item13= 	Dat_t magnit; 
-Item14=	float DZY;
-Item15=	float DZ;
-Item16=	float motk;   /// маг_отклон 
-Item17=	uint8_t cmd;
-Item18=} InclW_t __attribute__((aligned));
-Item19=
-Item20=InclW_t incW; /// Inclin|D3
+Count=9
+Item8=Decoder_t ResR; /// Декодер
 
 [FormMeta\mOut_Lines]
-Count=79
+Count=40
 Item0=/* Данные сгенерированы из:
 Item1=typedef struct
 Item2={
-Item3=	float X;
-Item4=	float Y;
-Item5=	float Z;
-Item6=	int16_t T; 
-Item7=} Dat_t __attribute__((aligned));
+Item3=	int16_t adc; /// АЦП
+Item4=} Decoder_t; 
+Item5=
+Item6=
+Item7=Decoder_t ResW; /// Декодер
 Item8=
-Item9=typedef struct
-Item10={
-Item11=	uint32_t InclTime; /// itime|D3TM
-Item12=	uint8_t Event;
-Item13= 	Dat_t accel; 
-Item14= 	Dat_t magnit; 
-Item15=	float DZY;
-Item16=	float DZ;
-Item17=	float motk;   /// маг_отклон 
-Item18=	uint8_t cmd;
-Item19=} InclW_t __attribute__((aligned));
-Item20=
-Item21=InclW_t incW; /// Inclin|D3
-Item22=*/
-Item23=
-Item24=// тип метаданных: meta_magnit_Dat_t=magnit
-Item25=typedef struct {
-Item26=  varType_t RecType; uint16_t SelfLen; uint8_t RecName[sizeof("magnit")];
-Item27=    varType_t varTypeX; uint8_t paramX[sizeof("X")];
-Item28=    varType_t varTypeY; uint8_t paramY[sizeof("Y")];
-Item29=    varType_t varTypeZ; uint8_t paramZ[sizeof("Z")];
-Item30=    varType_t varTypeT; uint8_t paramT[sizeof("T")];
-Item31=} meta_magnit_Dat_t __attribute__((aligned));
+Item9=Decoder_t ResR; /// Декодер
+Item10=*/
+Item11=
+Item12=// тип метаданных: meta_ResW_Decoder_t=Декодер
+Item13=typedef struct {
+Item14=  varType_t RecType; uint16_t SelfLen; uint8_t RecName[sizeof
+Item15=("Декодер")];
+Item16=    varType_t varTypeadc; uint8_t paramadc[sizeof("АЦП")];
+Item17=} meta_ResW_Decoder_t __attribute__((aligned));
+Item18=
+Item19=// тип метаданных: meta_ResR_Decoder_t=Декодер
+Item20=typedef struct {
+Item21=  varType_t RecType; uint16_t SelfLen; uint8_t RecName[sizeof
+Item22=("Декодер")];
+Item23=    varType_t varTypeadc; uint8_t paramadc[sizeof("АЦП")];
+Item24=} meta_ResR_Decoder_t __attribute__((aligned));
+Item25=
+Item26=// заполнение данных Decoder_t ResW
+Item27=#define META_DECODER_T_RESW meta_ResW_Decoder_t meta_ResW;
+Item28=#define META_DECODER_T_RESW_IMPL\
+Item29=  {VT_RECORD, sizeof(meta_ResW_Decoder_t),"Декодер",\
+Item30=     VT_I2, "АЦП",\
+Item31=  },
 Item32=
-Item33=// тип метаданных: meta_accel_Dat_t=accel
-Item34=typedef struct {
-Item35=  varType_t RecType; uint16_t SelfLen; uint8_t RecName[sizeof("accel")];
-Item36=    varType_t varTypeX; uint8_t paramX[sizeof("X")];
-Item37=    varType_t varTypeY; uint8_t paramY[sizeof("Y")];
-Item38=    varType_t varTypeZ; uint8_t paramZ[sizeof("Z")];
-Item39=    varType_t varTypeT; uint8_t paramT[sizeof("T")];
-Item40=} meta_accel_Dat_t __attribute__((aligned));
-Item41=
-Item42=// тип метаданных: meta_incW_InclW_t=Inclin|D3
-Item43=typedef struct {
-Item44=  varType_t RecType; uint16_t SelfLen; uint8_t RecName[sizeof("Inclin|D3")];
-Item45=    varType_t varTypeInclTime; uint8_t paramInclTime[sizeof("itime|D3TM")];
-Item46=    varType_t varTypeEvent; uint8_t paramEvent[sizeof("Event")];
-Item47=    meta_accel_Dat_t meta_accel;
-Item48=    meta_magnit_Dat_t meta_magnit;
-Item49=    varType_t varTypeDZY; uint8_t paramDZY[sizeof("DZY")];
-Item50=    varType_t varTypeDZ; uint8_t paramDZ[sizeof("DZ")];
-Item51=    varType_t varTypemotk; uint8_t parammotk[sizeof("маг_отклон")];
-Item52=    varType_t varTypecmd; uint8_t paramcmd[sizeof("cmd")];
-Item53=} meta_incW_InclW_t __attribute__((aligned));
-Item54=
-Item55=// заполнение данных InclW_t incW
-Item56=#define META_INCLW_T_INCW meta_incW_InclW_t meta_incW;
-Item57=#define META_INCLW_T_INCW_IMPL\
-Item58=  {VT_RECORD, sizeof(meta_incW_InclW_t),"Inclin|D3",\
-Item59=     VT_UI4, "itime|D3TM",\
-Item60=     VT_UI1, "Event",\
-Item61=     {VT_RECORD, sizeof(meta_accel_Dat_t),"accel",\
-Item62=        VT_R4, "X",\
-Item63=        VT_R4, "Y",\
-Item64=        VT_R4, "Z",\
-Item65=        VT_I2, "T",\
-Item66=     },\
-Item67=     {VT_RECORD, sizeof(meta_magnit_Dat_t),"magnit",\
-Item68=        VT_R4, "X",\
-Item69=        VT_R4, "Y",\
-Item70=        VT_R4, "Z",\
-Item71=        VT_I2, "T",\
-Item72=     },\
-Item73=     VT_R4, "DZY",\
-Item74=     VT_R4, "DZ",\
-Item75=     VT_R4, "маг_отклон",\
-Item76=     VT_UI1, "cmd",\
-Item77=  },
-Item78=
+Item33=// заполнение данных Decoder_t ResR
+Item34=#define META_DECODER_T_RESR meta_ResR_Decoder_t meta_ResR;
+Item35=#define META_DECODER_T_RESR_IMPL\
+Item36=  {VT_RECORD, sizeof(meta_ResR_Decoder_t),"Декодер",\
+Item37=     VT_I2, "АЦП",\
+Item38=  },
+Item39=
 
